--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,21 @@ env:
   INTERNAL_API_TOKEN: "dummy-token"
 
 jobs:
+  pr-title:
+    name: PR title (semantic)
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+    steps:
+      - name: Check PR title
+        run: |
+          title="${{ github.event.pull_request.title }}"
+          if ! echo "$title" | grep -qE '^(feat|fix|docs|style|refactor|test|chore)(\([a-z0-9-]+\))?: .+'; then
+            echo "Título do PR inválido: $title"
+            echo "Use: type(scope): subject (ex: feat: add login ou fix(api): corrige timeout)"
+            exit 1
+          fi
+          echo "Título OK: $title"
+
   build:
     runs-on: ubuntu-latest
 
