--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ pydub = "^0.25.1"
 python-magic = "^0.4.27"
 pylint = "v2.8.3"
 pandas = "^2.0.1"
+pyarrow = ">=14.0.0"
 openpyxl = "^3.1.2"
 XlsxWriter = "^3.1.0"
 django-redis = "^5.2.0"
