chore: update PR title validation to include optional ticket prefix format

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,9 +31,10 @@ jobs:
       - name: Check PR title
         run: |
           title="${{ github.event.pull_request.title }}"
-          if ! echo "$title" | grep -qE '^(feat|fix|docs|style|refactor|test|chore)(\([a-z0-9-]+\))?: .+'; then
+          if ! echo "$title" | grep -qE '^(\[[A-Z]+-[0-9]+\] )?(feat|fix|docs|style|refactor|test|chore)(\([a-z0-9-]+\))?: [A-Za-z].+'; then
             echo "Título do PR inválido: $title"
             echo "Use: type(scope): subject (ex: feat: add login ou fix(api): corrige timeout)"
+            echo "Prefixo de ticket opcional: [ENGAGE-1234] feat: add login"
             exit 1
           fi
           echo "Título OK: $title"
